--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,38 @@
+html {
+  background-color: lightcoral;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
+}
+
+.Spinner,
+.Spinner:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+
+.Spinner {
+  position: relative;
+  margin: 60px auto;
+  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-left: 1.1em solid #ffffff;
+
+  font-size: 10px;
+  text-indent: -9999em;
+  transform: translateZ(0);
+  animation: load8 1.1s infinite linear;
+}
+
+@keyframes load8 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
